# automakeTest

./: Makefile.am  configure.ac  test.cpp
